# "lib/ChangeLog"
#	$Id: ChangeLog,v 1.59 2009/10/31 02:22:13 fang Exp $

2009-10-30	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-44:
	  verilog/wrap_verilog_modules_to_hacprsim.awk:
		now emit parameters port-style using #(...)
		and preserves ordering, appending prsim_name="".
	  Tested.


2009-10-22	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-41:
	  verilog/wrap_verilog_modules_to_hacprsim.awk:
		now handles optional "wire" keyword in port declarations.
	  verilog/vcs_scandepend.sh: script to scan compile logs
		for list of included source files, for dependency generation.


2009-09-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-29+:
	  Added scripts/spice-wrap.awk: post-processor to automatically
		wrap long lines of spice files with customizable
		line continuation string.


2009-08-28	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-28+:
	  Added some scripts to convert prsim dumps to evcd files, 
		to export to other waveform viewers.  Not tested.
		Use prsimlog_to_evcd.sh.


2009-07-13	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-26:
	  verilog/wrap_verilog_modules_to_hacprsim.awk:
		extended parser to handle parameterized module definitions, 
		function blocks, parameter values, and for-loop
		expanding to_prsim and from_prsim connections.
	  Added verilog/vpp.sh: crude verilog preprocessor through cpp


2009-04-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-16-b:
	  Added script: prsim_alter_instance.awk, used to change
		instance hierarchy names in prsimrc scripts.


2009-03-20	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-11:
	  verilog/wrap_verilog_modules_to_hacprsim.awk:
		extended parser to allow signal directions to be specified
		directly in the ports list, rather than in the module body.
		No test cases added, unfortunately.  

