@@ -1,0 +1,31 @@
+`include "param.v"
+
+// vi: syntax=verilog
+// This file is automatically generated by wrap_verilog_modules_to_hacprsim.awk, maintained by David Fang.
+
+module HAC_AND_N;
+	parameter input_size = 2;
+	parameter prsim_name="";
+// need not be reg with acc: wn:*
+	wire [input_size-1:0] A;
+	wire Z;
+	integer i;
+	reg [64*8:1] verilog_name, tmp;
+	AND_N #(input_size)
+	dummy (
+		A,
+		Z
+	);
+initial begin
+#0	// happens *after* initial
+	if (prsim_name != "") begin
+	$sformat(verilog_name, "%m");
+	for (i=0; i<=input_size-1; i=i+1) begin
+		$sformat(tmp, ".A[%d]", i);
+		$from_prsim({prsim_name, tmp}, {verilog_name, tmp});
+	end // end for
+	$to_prsim({verilog_name, ".Z"}, {prsim_name, ".Z"});
+	end // end if
+end // end initial
+endmodule
+
