@@ -1,5 +1,13 @@
 # "lib/ChangeLog"
-#	$Id: ChangeLog,v 1.59 2009/10/31 02:22:13 fang Exp $
+#	$Id: ChangeLog,v 1.59.2.1 2009/12/04 19:27:50 fang Exp $
+
+2009-12-04	David Fang	<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-83-53-scalable-01:
+	  verilog/wrap_verilog_modules_to_hacprsim.awk:
+		fixed parsing of ranges.
+	  vpp.sh: changed single quote protection string
+
 
 2009-10-30	David Fang	<fangism@users.sourceforge.net>
 
